--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="styles.css">
-    <title>Document</title>
+    <title>test</title>
 </head>
 <body>
-    <h1>hb</h1>
+    <h1>test</h1>
     <script src="script.js"></script>
 </body>
 </html>
