--- a/home/index.html
+++ b/home/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
+    <title>test</title>
 </head>
 <body>
-    <h6>test</h6>
+    <h1>testttttttttt</h1>
+    <script src="script.js"></script>
 </body>
 </html>
