--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>test</h1>
-    <script src="script.js"></script>
+    <script src="./script.js"></script>
 </body>
 </html>
