--- a/home/index.html
+++ b/home/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="styles.css">
-    <title>test</title>
+    <title>teyyhshhst</title>
 </head>
 <body>
     <h1>testttttttttt</h1>
