--- a/interest/index.html
+++ b/interest/index.html
@@ -16,7 +16,7 @@
 			<h1></h1>
           		<img src="https://avatars.mds.yandex.net/i?id=89804327622d4eef3f6b3bbb88cbe401_l-12588376-images-thumbs&n=13" alt="Альтернативный текст" width="500" height="300">
 			
-			<li style="font-size: 26px;">Russia is the bigest country.</li>
+			<li style="font-size: 26px;">Russia is the biggest country.</li>
 			<h1></h1>
           		<img src="https://img.freepik.com/premium-vector/russia-map-illustration_728173-1852.jpg?w=2000" alt="Альтернативный текст" width="500" height="300">
 
@@ -50,5 +50,6 @@
 		</ol>
 	</body>
 </html>
+
 
 
