--- a/interest/index.html
+++ b/interest/index.html
@@ -4,6 +4,14 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>10 interest facts</title>
+		body {
+			  display: flex;
+			  justify-content: center; /* Центрирует по горизонтали */
+			  align-items: center;     /* Центрирует по вертикали */
+			  min-height: 100vh;
+			  margin: 0;
+			}
+
 	</head>
 	<body>
 		<h1 align="center">10 interest facts</h1>
@@ -50,6 +58,7 @@
 		</ol>
 	</body>
 </html>
+
 
 
 
