--- a/interest/index.html
+++ b/interest/index.html
@@ -4,18 +4,43 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>10 interest facts</title>
-		body {
-			  display: flex;
-			  justify-content: center; /* Центрирует по горизонтали */
-			  align-items: center;     /* Центрирует по вертикали */
-			  min-height: 100vh;
-			  margin: 0;
-			}
+		<style>
+	        body {
+	            display: flex;
+	            justify-content: center;
+	            align-items: center;
+	            min-height: 100vh;
+	            margin: 0;
+	            font-family: Calibri, sans-serif;
+	        }
+	        .container {
+	            width: 100%;
+	            max-width: 600px;
+	            text-align: center;
+	        }
+	        ol {
+	            list-style-position: inside;
+	            padding: 0;
+	            margin: 0 auto;
+	        }
+	        li {
+	            font-size: 26px;
+	            margin: 20px 0;
+	            text-align: center;
+	        }
+	        img {
+	            display: block;
+	            margin: 10px auto;
+	            max-width: 100%;
+	            height: auto;
+	        }
+    	</style>
 
 	</head>
-	<body>
-		<h1 align="center">10 interest facts</h1>
+	<body style="background-color: #92b2d4;">
+		
 		<ol>
+			<h1 align="center">10 interest facts</h1>
 			<li style="font-size: 26px;">You might suspect bears walking the streets in Russia, but you’ll never believe it, until you see it with your own eyes. It the most interesting fact.</li>
 			<h1></h1>
           		<img src="https://avatars.mds.yandex.net/i?id=b23e49b51444caad1b375d2ed94b8b6b_l-9694985-images-thumbs&n=13" alt="Альтернативный текст" width="500" height="300">
@@ -58,7 +83,5 @@
 		</ol>
 	</body>
 </html>
-
-
 
 
